got rid of hover distortion effect on projects due to loading issues for page

--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 }
 
 html, body {
-    max-width: 100%;
+    width: 100%;
 }
 
 body {
@@ -27,7 +27,6 @@ body {
 .outer-container {
     max-width: 1200px;
     margin: auto;
-    margin-bottom: 3rem;
     position: relative;
 }
 
@@ -84,7 +83,7 @@ header {
 }
 
 @media only screen and (max-width: 800px) {
-    html, body {
+    body {
         overflow-x: hidden;
     }
 
