--- a/work.css
+++ b/work.css
@@ -1,9 +1,11 @@
 .projects {
-    height: 200vh;
+    width: 100%;
+    margin-bottom: 20vh;
 }
 
 .project-container {
     position: relative;
+    width: 100%;
     top: 10vh;
 }
 
@@ -14,7 +16,7 @@
 }
 
 .work-col {
-    flex-basis: 50%;
+    flex-basis: 100%;
     margin: 1rem 0;
     margin-left: auto;
     margin-right: auto;
@@ -22,8 +24,8 @@
 
 .project-card {
     position: relative;
-    height: 38vh;
-    width: 36rem;
+    height: 70vh;
+    width: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -31,58 +33,41 @@
     align-items: center;
 }
 
-.trackid-img {
-    height: 70px;
-    width: 480px;
+.project-logo{
+    width: 55%;
 }
 
-.ballastpoint-img {
-    height: 92px;
-    width: 576px;
+.stussy-logo{
+    width: 20%;
 }
 
-.stussy-img {
-    height: 240px;
-    width: 240px;
+.br8s-logo{
+    width: 30%;
 }
 
-.caltrends-img {
-    height: 197px;
-    width: 256px;
+.cacti-logo{
+    width: 50%;
 }
 
-.br8s-img {
-    height: 148px;
-    width: 320px;
-}
 
 @media only screen and (max-width: 800px) {
-    .trackid-img {
-        height: 49.5px;
-        width: 330px;
-    }
-
-    .ballastpoint-img {
-        height: 53px;
-        width: 330px;
-    }
-
-    .stussy-img {
-        height: 220px;
-        width: 220px;
-    }
-
-    .caltrends-img {
-        height: 177px;
-        width: 230px;
-    }
-
-    .br8s-img {
-        height: 120px;
-        width: 260px;
-    }
-
     .project-card {
-        width: 100%;
+        height: 35vh;
+    }
+
+    .project-logo{
+        width: 70%;
+    }
+    
+    .stussy-logo{
+        width: 35%;
+    }
+    
+    .br8s-logo{
+        width: 40%;
+    }
+    
+    .cacti-logo{
+        width: 50%;
     }
 }
